<resources>
    <string name="app_name">IRRIGATE -  Smart Irrigation App</string>
    <string name="irrigate">IRRIGATE</string>
    <string name="smart_irrigation_app">Smart Irrigation App</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="smartly_control_the_farm">Smartly Control the Farm</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="_0000">----</string>
    <string name="automatic_setting">Automatic Setting</string>
    <string name="current_field_status">Current Field Status</string>
    <string name="water_flow">Water Flow</string>
    <string name="humidity">Humidity</string>
    <string name="manual_setting">Manual Setting</string>
    <string name="set_water_flow_speed">Set Water Flow Speed</string>
    <string name="current_humidity_level">Current Humidity Level:</string>
    <string name="step_1">Step 1:</string>
    <string name="select_start_humidity_level">Select Start Humidity Level</string>
    <string name="select_level">Select Level:</string>
    <string name="step_2">Step 2:</string>
    <string name="select_the_level_to_stop_partially">Select the Level to Stop Partially</string>
    <string name="step_3">Step 3:</string>
    <string name="select_the_level_to_stop_totally">Select the Level to Stop Totally</string>
    <string name="set_the_field">Set the Field</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="automatic_irrigation_is_working">Automatic Irrigation is working.</string>
</resources>