<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AutomaticSettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="sans-serif-black"
        android:text="@string/automatic_setting"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20ssp" />

    <View
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_1sdp"/>
    
    <LinearLayout
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/_15ssp"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/current_humidity_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/txtAutoCurrentHum"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorDark"
                    android:text="@string/step_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDark"
                    android:text="@string/select_start_humidity_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorDark"
                    android:text="@string/select_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spnAutoStartLevel"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorDark"
                    android:text="@string/step_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDark"
                    android:text="@string/select_the_level_to_stop_partially"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorDark"
                    android:text="@string/select_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spnAutoParStopLevel"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorDark"
                    android:text="@string/step_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDark"
                    android:text="@string/select_the_level_to_stop_totally"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorDark"
                    android:text="@string/select_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spnAutoStopTotLevel"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSetField"
        android:textColor="@android:color/white"
        android:text="@string/set_the_field"
        android:background="@color/colorDark"
        android:layout_margin="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>