<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"/>
    <TextView
        android:id="@+id/txtIrrigate"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/imgLoginLogo"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:text="@string/irrigate"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="@dimen/_30ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/login"
        android:layout_below="@id/txtIrrigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="@dimen/_15ssp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:text="@string/smartly_control_the_farm"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_below="@id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearTakeInput"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <com.hbb20.CountryCodePicker
                app:ccp_textSize="@dimen/_15ssp"
                app:ccp_contentColor="@android:color/white"
                app:ccp_showFlag="false"
                app:ccp_arrowColor="@android:color/white"
                app:ccp_showNameCode="true"
                android:id="@+id/cpCountryCode"
                app:ccp_autoDetectCountry="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <EditText
                android:cursorVisible="true"
                android:id="@+id/edtUserMobileNo"
                android:textSize="@dimen/_15ssp"
                android:fontFamily="sans-serif-black"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:inputType="number"
                android:hint="@string/enter_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:textColor="@android:color/white"
        android:text="@string/send_otp"
        android:background="@color/colorDark"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_below="@+id/linearTakeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>