<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.viewpager.widget.ViewPager
        android:layout_above="@+id/tab_indicator"
        android:id="@+id/screen_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_30sdp"/>

    <androidx.cardview.widget.CardView
        android:layout_above="@id/tv_skip"
        android:id="@+id/btn_next"
        app:cardBackgroundColor="@color/colorDark"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </androidx.cardview.widget.CardView>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_indicator"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_above="@id/btn_next"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/indicator_selector">
    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tab_indicator"
        android:id="@+id/btn_get_started"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginBottom="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"/>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/_15ssp"
        android:textColor="@android:color/white"
        android:id="@+id/tv_skip"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip" />

</RelativeLayout>