<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".VerifyOTPActivity">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_60sdp"/>
    <TextView
        android:id="@+id/txtIrrigate"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/imgLoginLogo"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:text="@string/irrigate"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:textSize="@dimen/_30ssp"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/verify_otp"
        android:layout_below="@id/txtIrrigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/txtSendOTP"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/white"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_below="@id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearTakeInput"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.chaos.view.PinView
            app:itemCount="4"
            app:cursorColor="@android:color/white"
            android:hint="@string/_0000"
            android:textColorHint="@android:color/white"
            android:inputType="number"
            android:id="@+id/pinOTP"
            style="@style/PinWidget.PinView"
            app:itemSpacing="@dimen/_10sdp"
            app:itemRadius="@dimen/_5sdp"
            app:viewType="rectangle"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:layout_gravity="center_horizontal"
            app:lineColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnVerifyOTP"
        android:textColor="@android:color/white"
        android:text="@string/verify_otp"
        android:background="@color/colorDark"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_below="@+id/linearTakeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>