<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".ManualSettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/_20ssp"
            android:textColor="@android:color/white"
            android:text="@string/manual_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_1sdp"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_below="@+id/cardData"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardManualSetting"
                    android:layout_margin="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:text="NULL"
                            android:id="@+id/txtManualHumidity"
                            android:fontFamily="sans-serif-black"
                            android:textColor="@color/colorDark"
                            android:textSize="@dimen/_25ssp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/humidity"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/colorDark"
                            android:textSize="@dimen/_15ssp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAutomaticSetting"
                    android:layout_margin="@dimen/_2sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imgManualWaterFlow"
                            android:src="@drawable/water_off"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"/>
                        <Switch
                            android:id="@+id/switchManualWaterFLow"
                            style="@style/SCBSwitch"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_gravity="start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/_13ssp"
            android:textColor="@android:color/white"
            android:text="@string/set_water_flow_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.xw.repo.BubbleSeekBar
            android:id="@+id/seekbarWaterFlow"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bsb_bubble_color="@android:color/white"
            app:bsb_bubble_text_color="@color/colorDark"
            app:bsb_max="100"
            app:bsb_min="0"
            app:bsb_progress="0"
            app:bsb_second_track_color="@color/colorDark"
            app:bsb_section_count="5"
            app:bsb_section_text_position="bottom_sides"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="true"
            app:bsb_show_thumb_text="true"
            app:bsb_track_color="@android:color/white"/>


        <com.ebanx.swipebtn.SwipeButton
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/swipeButtonManualSetField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:button_image_disabled="@drawable/ic_arrow"
            app:button_image_enabled="@drawable/ic_arrow"
            app:button_background="@drawable/login_main_button_round_shape"
            app:button_bottom_padding="20dp"
            app:button_left_padding="20dp"
            app:button_right_padding="20dp"
            app:button_top_padding="20dp"
            app:inner_text="Swipe to Set Field"
            app:inner_text_background="@drawable/login_button_round_shape"
            app:inner_text_bottom_padding="18dp"
            app:inner_text_color="@color/colorDark"
            app:inner_text_size="16sp"
            app:inner_text_top_padding="18dp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/txtManualNote"
            android:textSize="@dimen/_15ssp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/automatic_irrigation_is_working"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>